Changes: 1. Wrapped the theme toggler button in a React fragment instead of a div so that no extra DOM nodes are added. 2. Added a loading page. 3. Fixed the flashing when the application is initially loading. 4. Changed the favicon. 5. Added a local font called Black Chancery.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
-html,
-body {
+
+@font-face {
+  font-family: "Black Chancery";
+  src: url("../public/fonts/BlackChancery-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
